@@ -1,3 +1,5 @@
+.. -*- mode: doctest -*-
+
 # Copyright (c) 2009 Zope Foundation and contributors.
 # All Rights Reserved.
 #
@@ -118,88 +120,22 @@ first entry is not disturbed:
     MAILTO=""
     @reboot echo "No-one will see this"
 
-When introducing a new environment variable to leave markers which buildout is
-used, the mix between the environment is right:
+Briefly in the 0.5 version, a 'BUILDOUT' environment variable was used for
+grouping items per buildout. Now for some up/downgrade testing.  0.5.1 removes
+the environment variable again. We'll add an entry with such a (now
+deprecated) "grouping environment variable". First the start situation:
 
-    >>> c.crontab = ['MAILTO=""', 'BUILDOUT=my/path', '@reboot echo "no mailto, my/path"']
-    >>> print c
-    MAILTO=""
-    BUILDOUT=my/path
-    @reboot echo "no mailto, my/path"
-    >>> c.add_entry('@reboot echo "no mailto, my/other"', MAILTO="", BUILDOUT="my/other")
-    >>> print c
-    MAILTO=""
-    BUILDOUT=my/path
-    @reboot echo "no mailto, my/path"
-    <BLANKLINE>
-    BUILDOUT=my/other
-    @reboot echo "no mailto, my/other"
-    >>> c.add_entry('@reboot echo "no mailto, my/other, bla"', MAILTO="", BUILDOUT="my/other")
-    >>> print c
-    MAILTO=""
-    BUILDOUT=my/path
-    @reboot echo "no mailto, my/path"
-    <BLANKLINE>
-    BUILDOUT=my/other
-    @reboot echo "no mailto, my/other, bla"
-    @reboot echo "no mailto, my/other"
-    >>> c.add_entry('@reboot echo "mailto example, my/path"',
-    ...             MAILTO="something@example.com", BUILDOUT="my/path")
-    >>> print c
-    MAILTO=""
-    BUILDOUT=my/path
-    @reboot echo "no mailto, my/path"
-    <BLANKLINE>
-    BUILDOUT=my/other
-    @reboot echo "no mailto, my/other, bla"
-    @reboot echo "no mailto, my/other"
-    MAILTO=something@example.com
-    <BLANKLINE>
-    BUILDOUT=my/path
-    @reboot echo "mailto example, my/path"
-
-Adding an extra environment variable to an existing entry results in a second
-entry, but with the extra environment variable.  This is technically correct,
-but it might warrant an exception. TODO.
-
-    >>> c.add_entry('@reboot echo "mailto example, my/path"',
-    ...             MAILTO="something@example.com", BUILDOUT="my/path",
-    ...             BLA='bla')
-    >>> print c
-    MAILTO=""
-    BUILDOUT=my/path
-    @reboot echo "no mailto, my/path"
-    <BLANKLINE>
-    BUILDOUT=my/other
-    @reboot echo "no mailto, my/other, bla"
-    @reboot echo "no mailto, my/other"
-    MAILTO=something@example.com
-    <BLANKLINE>
-    BUILDOUT=my/path
-    @reboot echo "mailto example, my/path"
-    BLA=bla
-    @reboot echo "mailto example, my/path"
-
-The environment variable is mainly used for grouping items per buildout. Now
-for some upgrade testing.  Pre-0.5 versions of this recipe did not group
-entries per buildout.  We'll add an entry without such a "grouping environment
-variable". First the start situation:
-
-    >>> c.crontab=['WARNING=The entries below were generated by buildout, do not modify',
-    ...            '@reboot echo nothing happens']
+    >>> c.crontab=[
+    ...     'BUILDOUT=my/buildout',
+    ...     '@reboot echo nothing happens']
     >>> print c # doctest: +ELLIPSIS +NORMALIZE_WHITESPACE
-    WARNING=The entries below were generated by buildout, do not modify
-    @reboot echo nothing happens    
-
-Now we add a similar entry, but with a BUILDOUT environment variable.  The old
-item should now be inside the environment, without a double (and with a
-newline before the BUILDOUT environment variable for better readability):
-
-    >>> c.add_entry('@reboot echo nothing happens', BUILDOUT="my/buildout")
-    >>> print c # doctest: +REPORT_NDIFF
-    WARNING=The entries below were generated by buildout, do not modify
-    <BLANKLINE>
     BUILDOUT=my/buildout
+    @reboot echo nothing happens
+
+Now we add a similar entry. The BUILDOUT statement is removed:
+
+    >>> c.add_entry('@reboot echo nothing happens')
+    >>> print c # doctest: +REPORT_NDIFF
     @reboot echo nothing happens
 
 
@@ -279,12 +215,6 @@ Check that it really was added to the crontab:
     True
 
     >>> 'WARNING=The entries below were generated by buildout, do not modify' in c.crontab
-    True
-
-The entries are grouped per buildout (with a blank line in front of every
-BUILDOUT line for better readability):
-
-    >>> '\n\nBUILDOUT=' in repr(c)
     True
 
 Uninstall the recipe:
