@@ -25,7 +25,7 @@ class UserCrontab:
         self.env = {
             'WARNING':
             'The entries below were generated by buildout, do not modify',
-            'BUILDOUT': buildout['buildout']['directory']
+            #'BUILDOUT': buildout['buildout']['directory']
             }
 
     def install(self):
