@@ -4,7 +4,8 @@ z3c.recipe.usercrontab changes
 0.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Reverted the "BUILDOUT=..." environment variable, including migration.  I'll
+  add a better way after this release.  [reinout] 
 
 
 0.5 (2009-06-15)
